--- a/INDEX.html
+++ b/INDEX.html
@@ -170,7 +170,7 @@
         
         #Your Photos
         <div id="photos">
-            <img src="your-photo1.jpg" alt="Us Together"> 
+            <img src="photo-1.jpg" alt="Us Together"> 
             <img src="your-photo2.jpg" alt="Beautiful Moment">
         </div>
 
@@ -282,7 +282,7 @@
 
     <!-- First Screen (Photo 1) -->
     <div id="screen1" class="screen active">
-        <img src="your-photo1.jpg" alt="Our First Photo">
+        <img src="photo-1.jpg" alt="Our First Photo">
         <button class="btn" onclick="nextScreen()">Next</button>
     </div>
 
