--- a/INDEX.html
+++ b/INDEX.html
@@ -297,7 +297,7 @@
 
     <!-- Third Screen (Photo 2 with Message) -->
     <div id="screen3" class="screen">
-        <img src="your-photo2.jpg" alt="Our Beautiful Moment">
+        <img src="photo-2.jpg" alt="Our Beautiful Moment">
         <p id="message">I love youuu so much bachaaa ❤️</p>
     </div>
 
